--- a/css/style.css
+++ b/css/style.css
@@ -336,3 +336,59 @@ template {
 [hidden] {
   display: none;
 }
+
+tr > th, tr>td {
+  border:1px solid #000;
+  padding: 5px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #dcdcdc;
+  user-select: none; 
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap:  15px;
+  background: #212121;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 360px;
+  margin: 50px auto;
+}
+
+.item {
+  background: #b3fcce;
+  color: #000;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+form {
+  max-width: 100%;
+}
+
+input {
+  width: 100%;
+  height: 60px;
+  border:none;
+  font-size: 30px;
+  outline: none;
+  text-align: right;
+  padding-right: 10px;
+}
+
+.input {
+  grid-column: 1/-1;
+  padding: 0;
+}
